/***************************************************************
 * Author:        Sukhovii Daniil
 * Email:       sukhovii.daniil@gmail.com
 * Created:       2026-08-05
 *
 * Disclaimer:
 *   This file is part of Bomberman.
 *   Unauthorized use, reproduction, or distribution is prohibited.
***************************************************************/
#ifndef BOMBERMAN_LOGIC_POWERUP_H
#define BOMBERMAN_LOGIC_POWERUP_H

#include "bomberman/logic/entity/Entity.h"
#include "bomberman/logic/events/GameEvents.h"
#include "bomberman/logic/grid/TilePos.h"

namespace bomberman::logic {

    /**
     * @brief A pick-up revealed by destroying a block.
     *
     * Passive: it sits on a cell until a character walks over it or a
     * blast reaches it ("Explosions also destroy any power-ups within
     * range").
     */
    class PowerUp : public Entity {
    public:
        /**
         * @param shield_seconds How long this pick-up ignores fire.
         *
         * A power-up is revealed *by* a blast, in the very cell that blast
         * is burning. Without a shield it is destroyed on the frame it
         * appears - which is what happened here until a test asked whether
         * any pick-up ever survived. Passing the explosion's own lifetime
         * means "the item appears once the fire clears", which is also how
         * it reads on screen.
         */
        PowerUp(sif::math::Point2 position, float size, TilePos cell, PowerUpKind kind,
                float shield_seconds = 0.f);

        void update(float dt) override;

        /// @brief True while fire cannot destroy this pick-up.
        [[nodiscard]] bool shielded() const;

        [[nodiscard]] PowerUpKind kind() const;
        [[nodiscard]] const TilePos& cell() const;

    private:
        TilePos cell_;
        PowerUpKind kind_;
        float shield_remaining_ = 0.f;
    };
}

#endif //BOMBERMAN_LOGIC_POWERUP_H
